# Otus-exceptional

./: .clang_format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: Command1.h  Command2.h  Command3.h  ErrorHandler.h  ICommand.h  LogExceptionCommand.h  RepeatCommand.h  RepeatCommandException.h
test/: exeptional_test.cpp
